Update GitHub Actions workflow for Codecov integration
- Replaced the deprecated `codecov/test-results-action@v1` with `codecov/codecov-action@v5` for improved functionality.
- Adjusted the configuration to specify `report_type: test_results` and ensured the `CODECOV_TOKEN` is set in the environment for better security and clarity in reporting.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -48,10 +48,12 @@ jobs:
         continue-on-error: true
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-      - uses: codecov/test-results-action@v1
+      - uses: codecov/codecov-action@v5
         if: ${{ !cancelled() }}
         continue-on-error: true
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
+          report_type: test_results
           files: coverage/junit-coverage.xml
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
 
